[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "ArchLinux's PKGBUILD generator from Cargo.toml manifest file"
homepage = "https://github.com/kstep/cargo-pkgbuild"
license = "MIT/Apache-2.0"
name = "cargo-pkgbuild"
readme = "README.md"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.9"
