[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "ArchLinux's PKGBUILD generator from Cargo.toml manifest file"
homepage = "https://github.com/kstep/cargo-pkgbuild"
license = "MIT/Apache-2.0"
name = "cargo-pkgbuild"
readme = "README.md"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.14.2"
locate-cargo-manifest = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.9"
